Fix spacing for lists

--- a/css/master-ie.css
+++ b/css/master-ie.css
@@ -34,7 +34,7 @@ a:hover, a:active {
 
 ul, ol {
   padding: 0;
-  margin: 0 0 0.833em 25px;
+  margin: 0 0 1.666em 25px;
 }
 
 ul ul,
