--- a/sass/framework/partials/base/_typo.scss
+++ b/sass/framework/partials/base/_typo.scss
@@ -54,7 +54,7 @@ a:hover, a:active {
 // Typical lists
 ul, ol {
   	padding: 0;
-  	margin: 0 0 $baseLineHeight / 2 25px;
+  	margin: 0 0 $baseLineHeight 25px;
 }
 
 // Nested lists
